--- a/Templates/Verses.cshtml
+++ b/Templates/Verses.cshtml
@@ -12,7 +12,7 @@
     <div data-role="page">
         <div data-role="header" data-position="fixed">
             <h1>@Model.Name</h1>
-            <a href="/" data-icon="home" data-iconpos="notext" data-inline="true"></a> 
+            <a href="../../index.html" data-icon="home" data-iconpos="notext" data-inline="true"></a> 
         </div>
         <div data-role="content">
 		    <div class="ui-grid-b">
