--- a/Templates/Verses.cshtml
+++ b/Templates/Verses.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
     <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
+    <style type="text/css">td.verse { vertical-align: top; padding: 0.5em 0.2em; width: 33.3% }</style>
 </head>
 <body>
     <div data-role="page">
@@ -15,27 +16,29 @@
             <a href="../../index.html" data-icon="home" data-iconpos="notext" data-inline="true"></a> 
         </div>
         <div data-role="content">
-		    <div class="ui-grid-b">
+		    <table>
                 @foreach (var verse in Model.Verses)
                 {
-			    <div class="ui-block-a">
-                    @if (verse.InEnglish)
-                    {
-                    <strong>@verse.English.Id</strong> @verse.English.Text
-                    }
-                </div>
-                <div class="ui-block-b">
-                    @if (verse.InMalayalam)
-                    {
-                    <strong>@verse.Malayalam.Id</strong> @verse.Malayalam.Text
-                    }
-                </div>
-                <div class="ui-block-c">
-                    @if (verse.InHindi)
-                    {
-                    <strong>@verse.Hindi.Id</strong> @verse.Hindi.Text
-                    }
-                </div>
+                <tr>
+			        <td class="verse">
+                        @if (verse.InEnglish)
+                        {
+                        <strong>@verse.English.Id</strong> @verse.English.Text
+                        }
+                    </td>
+                    <td class="verse">
+                        @if (verse.InMalayalam)
+                        {
+                        <strong>@verse.Malayalam.Id</strong> @verse.Malayalam.Text
+                        }
+                    </td>
+                    <td class="verse">
+                        @if (verse.InHindi)
+                        {
+                        <strong>@verse.Hindi.Id</strong> @verse.Hindi.Text
+                        }
+                    </td>
+                </tr>
                 }
             </div>
         </div>
