--- a/Templates/Verses.cshtml
+++ b/Templates/Verses.cshtml
@@ -8,31 +8,47 @@
     <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
     <style type="text/css">td.verse { vertical-align: top; padding: 0.5em 0.2em; width: 33.3% }</style>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('input[type=checkbox]').change(function () {
+                translation = $(this).attr('name');
+                $('.' + translation).toggle();
+            });
+        });
+    </script>
 </head>
 <body>
     <div data-role="page">
         <div data-role="header" data-position="fixed">
-            <h1>@Model.Name</h1>
-            <a href="../../index.html" data-icon="home" data-iconpos="notext" data-inline="true"></a> 
+            <a href="../../index.html" data-icon="home" data-iconpos="notext"></a>
+            <h1>@Model.Name</h1>            
+			<div class="ui-btn-right" data-role="controlgroup" data-type="horizontal" data-mini="true">
+				<input type="checkbox" name="english" id="english" data-mini="true">
+				<label for="english">English</label>
+				<input type="checkbox" name="malayalam" id="malayalam" data-mini="true">
+				<label for="malayalam">മലയാളം</label>
+				<input type="checkbox" name="hindi" id="hindi" data-mini="true">
+				<label for="hindi">हिन्दी</label>
+			</div>
         </div>
         <div data-role="content">
 		    <table>
                 @foreach (var verse in Model.Verses)
                 {
                 <tr>
-			        <td class="verse">
+			        <td class="verse english">
                         @if (verse.InEnglish)
                         {
                         <strong>@verse.English.Id</strong> @verse.English.Text
                         }
                     </td>
-                    <td class="verse">
+                    <td class="verse malayalam">
                         @if (verse.InMalayalam)
                         {
                         <strong>@verse.Malayalam.Id</strong> @verse.Malayalam.Text
                         }
                     </td>
-                    <td class="verse">
+                    <td class="verse hindi">
                         @if (verse.InHindi)
                         {
                         <strong>@verse.Hindi.Id</strong> @verse.Hindi.Text
