--- a/Templates/Verses.cshtml
+++ b/Templates/Verses.cshtml
@@ -20,7 +20,7 @@
 <body>
     <div data-role="page">
         <div data-role="header" data-position="fixed">
-            <a href="../../index.html" data-icon="home" data-iconpos="notext"></a>
+            <a href="../../index.html" data-icon="home" data-iconpos="notext" data-shadow="false"></a>
             <h1>@Model.Name</h1>            
 			<div class="ui-btn-right" data-role="controlgroup" data-type="horizontal" data-mini="true">
 				<input type="checkbox" name="english" id="english" data-mini="true">
