--- a/Templates/Index.cshtml
+++ b/Templates/Index.cshtml
@@ -23,7 +23,7 @@
                     <ul data-role="listview">
                         @for (int i = 1; i < book.Chapters + 1; i++)
                         {
-                            <li><a href="@book.Id/@i/index.html">@i</a></li>
+                            <li><a href="@book.Id/@i/index.html" data-ajax="false">@i</a></li>
                         }
                     </ul>
                 </li>
@@ -35,7 +35,7 @@
                     <ul data-role="listview">
                         @for (int i = 1; i < book.Chapters + 1; i++)
                         {
-                            <li><a href="@book.Id/@i/index.html">@i</a></li>
+                            <li><a href="@book.Id/@i/index.html" data-ajax="false">@i</a></li>
                         }
                     </ul>
                 </li>
