--- a/Templates/Index.cshtml
+++ b/Templates/Index.cshtml
@@ -11,7 +11,7 @@
 <body>
     <div data-role="page">
         <div data-role="header" data-position="fixed">
-            <h1>Books</h1>
+            <h1>Parallel Bible</h1>
         </div>
         <div data-role="content">
             <ul data-role="listview" data-filter="true">
