Invert translation toggle initial state

--- a/Templates/Verses.cshtml
+++ b/Templates/Verses.cshtml
@@ -23,11 +23,11 @@
             <a href="../../index.html" data-icon="home" data-iconpos="notext" data-shadow="false" data-ajax="false"></a>
             <h1>@Model.Name</h1>            
 			<div class="ui-btn-right" data-role="controlgroup" data-type="horizontal" data-mini="true">
-				<input type="checkbox" name="english" id="english" data-mini="true">
+				<input type="checkbox" name="english" id="english" data-mini="true" checked="checked">
 				<label for="english">English</label>
-				<input type="checkbox" name="malayalam" id="malayalam" data-mini="true">
+				<input type="checkbox" name="malayalam" id="malayalam" data-mini="true" checked="checked">
 				<label for="malayalam">മലയാളം</label>
-				<input type="checkbox" name="hindi" id="hindi" data-mini="true">
+				<input type="checkbox" name="hindi" id="hindi" data-mini="true" checked="checked">
 				<label for="hindi">हिन्दी</label>
 			</div>
         </div>
