--- a/Templates/Verses.cshtml
+++ b/Templates/Verses.cshtml
@@ -6,16 +6,21 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
     <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
-    <style type="text/css">td.verse { vertical-align: top; padding: 0.5em 0.2em; width: 33.3% }</style>
     <script type="text/javascript">
         $(document).ready(function () {
             $('input[type=checkbox]').change(function () {
                 translation = $(this).attr('name');
                 $('.' + translation).toggle();
+                $.cookie(translation, $(this).is(':checked'), { path: '/' });
             });
+            if ($.cookie('english') == 'false') $('input[type=checkbox][name=english]').change().removeAttr('checked');
+            if ($.cookie('malayalam') == 'false') $('input[type=checkbox][name=malayalam]').change().removeAttr('checked');
+            if ($.cookie('hindi') == 'false') $('input[type=checkbox][name=hindi]').change().removeAttr('checked');
         });
     </script>
+    <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
+    <script src="../../js/jquery.cookie.min.js"></script>
+    <style type="text/css">td.verse { vertical-align: top; padding: 0.5em 0.2em; width: 33.3% }</style>
 </head>
 <body>
     <div data-role="page">
