--- a/Templates/Verses.cshtml
+++ b/Templates/Verses.cshtml
@@ -20,7 +20,7 @@
     </script>
     <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
     <script src="../../js/jquery.cookie.min.js"></script>
-    <style type="text/css">td.verse { vertical-align: top; padding: 0.5em 0.2em; width: 33.3% }</style>
+    <style type="text/css">td.verse { font-size: 1.2em; vertical-align: top; padding: 0.5em 0.2em; width: 33.3% }</style>
 </head>
 <body>
     <div data-role="page">
