--- a/Templates/Verses.cshtml
+++ b/Templates/Verses.cshtml
@@ -2,10 +2,9 @@
 <html>
 <head>
     <title>Parallel Bible</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
-    <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $('input[type=checkbox]').change(function () {
@@ -18,8 +17,8 @@
             if ($.cookie('hindi') == 'false') $('input[type=checkbox][name=hindi]').change().removeAttr('checked');
         });
     </script>
-    <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
-    <script src="../../js/jquery.cookie.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
+    <script type="text/javascript" src="../../js/jquery.cookie.min.js"></script>
     <style type="text/css">td.verse { font-size: 1.2em; vertical-align: top; padding: 0.5em 0.2em; width: 33.3% }</style>
 </head>
 <body>
@@ -61,7 +60,7 @@
                     </td>
                 </tr>
                 }
-            </div>
+            </table>
         </div>
         <div data-role="footer" data-position="fixed">
 		    <div data-role="navbar">
