--- a/Templates/Verses.cshtml
+++ b/Templates/Verses.cshtml
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="../../js/jquery.cookie.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $('input[type=checkbox]').change(function () {
@@ -12,13 +13,13 @@
                 $('.' + translation).toggle();
                 $.cookie(translation, $(this).is(':checked'), { path: '/' });
             });
-            if ($.cookie('english') == 'false') $('input[type=checkbox][name=english]').change().removeAttr('checked');
-            if ($.cookie('malayalam') == 'false') $('input[type=checkbox][name=malayalam]').change().removeAttr('checked');
-            if ($.cookie('hindi') == 'false') $('input[type=checkbox][name=hindi]').change().removeAttr('checked');
+            $.each(['english', 'malayalam', 'hindi'], function (index, value) {
+                if ($.cookie(value) == 'false')
+                    $('input[type=checkbox][name=' + value + ']').change().removeAttr('checked');
+            });
         });
     </script>
     <script type="text/javascript" src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
-    <script type="text/javascript" src="../../js/jquery.cookie.min.js"></script>
     <style type="text/css">td.verse { font-size: 1.2em; vertical-align: top; padding: 0.5em 0.2em; width: 33.3% }</style>
 </head>
 <body>
