--- a/Templates/Index.cshtml
+++ b/Templates/Index.cshtml
@@ -3,9 +3,9 @@
 <head>
     <title>Parallel Bible</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
 </head>
 <body>
     <div data-role="page">
