--- a/Templates/Verses.cshtml
+++ b/Templates/Verses.cshtml
@@ -3,8 +3,8 @@
 <head>
     <title>Parallel Bible</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="../../js/jquery.cookie.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
@@ -19,14 +19,14 @@
             });
         });
     </script>
-    <script type="text/javascript" src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
     <style type="text/css">td.verse { font-size: 1.2em; vertical-align: top; padding: 0.5em 0.2em; width: 33.3% }</style>
 </head>
 <body>
     <div data-role="page">
         <div data-role="header" data-position="fixed">
             <a href="../../index.html" data-icon="home" data-iconpos="notext" data-shadow="false" data-ajax="false"></a>
-            <h1>@Model.Name</h1>            
+            <h1>@Model.Name</h1>
 			<div class="ui-btn-right" data-role="controlgroup" data-type="horizontal" data-mini="true">
 				<input type="checkbox" name="english" id="english" data-mini="true" checked="checked">
 				<label for="english">English</label>
